// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typewriter methods deleteChars should add event items for amount of characters 1`] = `
[
  {
    "eventArgs": {
      "speed": null,
    },
    "eventName": "remove_all",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "change_cursor",
  },
  {
    "eventArgs": {},
    "eventName": "remove_character",
  },
  {
    "eventArgs": {},
    "eventName": "remove_character",
  },
  {
    "eventArgs": {},
    "eventName": "remove_character",
  },
  {
    "eventArgs": {},
    "eventName": "remove_character",
  },
  {
    "eventArgs": {},
    "eventName": "remove_character",
  },
  {
    "eventArgs": {},
    "eventName": "remove_character",
  },
  {
    "eventArgs": {},
    "eventName": "remove_character",
  },
  {
    "eventArgs": {},
    "eventName": "remove_character",
  },
  {
    "eventArgs": {},
    "eventName": "remove_character",
  },
  {
    "eventArgs": {},
    "eventName": "remove_character",
  },
]
`;

exports[`Typewriter methods pasteString should correctly add event items to queue if string does not contain html 1`] = `
[
  {
    "eventArgs": {
      "speed": null,
    },
    "eventName": "remove_all",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "change_cursor",
  },
  {
    "eventArgs": {
      "character": "Hello world!",
      "htmlTextInfo": null,
      "node": null,
    },
    "eventName": "paste_string",
  },
]
`;

exports[`Typewriter methods removeCharacters should add event items for amount of characters 1`] = `
[
  {
    "eventArgs": {
      "speed": null,
    },
    "eventName": "remove_all",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "change_cursor",
  },
  {
    "eventArgs": {},
    "eventName": "remove_character",
  },
  {
    "eventArgs": {},
    "eventName": "remove_character",
  },
  {
    "eventArgs": {},
    "eventName": "remove_character",
  },
  {
    "eventArgs": {},
    "eventName": "remove_character",
  },
  {
    "eventArgs": {},
    "eventName": "remove_character",
  },
]
`;

exports[`Typewriter methods runEventLoop should reset queue correctly if event queue is empty and loop option is true 1`] = `
[
  {
    "eventArgs": {
      "delay": 5000,
    },
    "eventName": "change_delay",
  },
]
`;

exports[`Typewriter methods runEventLoop valid delta remove_all should correctly push remove last node events with speed change when provided 1`] = `
[
  {
    "eventArgs": {
      "speed": 100,
      "temp": true,
    },
    "eventName": "change_delete_speed",
  },
  {
    "eventArgs": {
      "removingCharacterNode": false,
    },
    "eventName": "remove_last_visible_node",
  },
  {
    "eventArgs": {
      "speed": 10,
      "temp": true,
    },
    "eventName": "change_delete_speed",
  },
]
`;

exports[`Typewriter methods runEventLoop valid delta remove_all should correctly push remove last node events without speed change 1`] = `
[
  {
    "eventArgs": {
      "removingCharacterNode": false,
    },
    "eventName": "remove_last_visible_node",
  },
]
`;

exports[`Typewriter methods typeCharacters should add event items for amount of characters 1`] = `
[
  {
    "eventArgs": {
      "speed": null,
    },
    "eventName": "remove_all",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "change_cursor",
  },
  {
    "eventArgs": {
      "character": "h",
      "characterIndex": 0,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "hello",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 1,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "hello",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 2,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "hello",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 3,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "hello",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "0",
      "characterIndex": 4,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "hello",
    },
    "eventName": "type_character",
  },
]
`;

exports[`Typewriter methods typeOutAllStrings should correctly add event item to queue when options.strings is a string 1`] = `
[
  {
    "eventArgs": {
      "speed": null,
    },
    "eventName": "remove_all",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "change_cursor",
  },
  {
    "eventArgs": {
      "character": "H",
      "characterIndex": 0,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 1,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 2,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 3,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 4,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": " ",
      "characterIndex": 5,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "w",
      "characterIndex": 6,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 7,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "r",
      "characterIndex": 8,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 9,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "d",
      "characterIndex": 10,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "!",
      "characterIndex": 11,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "ms": 1500,
    },
    "eventName": "pause_for",
  },
]
`;

exports[`Typewriter methods typeOutAllStrings should correctly add multiple event items to queue when options.strings is an array 1`] = `
[
  {
    "eventArgs": {
      "speed": null,
    },
    "eventName": "remove_all",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "change_cursor",
  },
  {
    "eventArgs": {
      "character": "H",
      "characterIndex": 0,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 1,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 2,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 3,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 4,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "ms": 1500,
    },
    "eventName": "pause_for",
  },
  {
    "eventArgs": {
      "speed": "natural",
    },
    "eventName": "remove_all",
  },
  {
    "eventArgs": {
      "character": "w",
      "characterIndex": 0,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 1,
      "stringPart": "world!, ",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 1,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 1,
      "stringPart": "world!, ",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "r",
      "characterIndex": 2,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 1,
      "stringPart": "world!, ",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 3,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 1,
      "stringPart": "world!, ",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "d",
      "characterIndex": 4,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 1,
      "stringPart": "world!, ",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "!",
      "characterIndex": 5,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 1,
      "stringPart": "world!, ",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": ",",
      "characterIndex": 6,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 1,
      "stringPart": "world!, ",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": " ",
      "characterIndex": 7,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 1,
      "stringPart": "world!, ",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "ms": 1500,
    },
    "eventName": "pause_for",
  },
  {
    "eventArgs": {
      "speed": "natural",
    },
    "eventName": "remove_all",
  },
  {
    "eventArgs": {
      "character": "H",
      "characterIndex": 0,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 2,
      "stringPart": "How",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 1,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 2,
      "stringPart": "How",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "w",
      "characterIndex": 2,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 2,
      "stringPart": "How",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "ms": 1500,
    },
    "eventName": "pause_for",
  },
  {
    "eventArgs": {
      "speed": "natural",
    },
    "eventName": "remove_all",
  },
  {
    "eventArgs": {
      "character": "a",
      "characterIndex": 0,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 3,
      "stringPart": "are",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "r",
      "characterIndex": 1,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 3,
      "stringPart": "are",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 2,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 3,
      "stringPart": "are",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "ms": 1500,
    },
    "eventName": "pause_for",
  },
  {
    "eventArgs": {
      "speed": "natural",
    },
    "eventName": "remove_all",
  },
  {
    "eventArgs": {
      "character": "y",
      "characterIndex": 0,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 4,
      "stringPart": "you?",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 1,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 4,
      "stringPart": "you?",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "u",
      "characterIndex": 2,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 4,
      "stringPart": "you?",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "?",
      "characterIndex": 3,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 4,
      "stringPart": "you?",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "ms": 1500,
    },
    "eventName": "pause_for",
  },
  {
    "eventArgs": {
      "speed": "natural",
    },
    "eventName": "remove_all",
  },
]
`;

exports[`Typewriter methods typeOutHTMLString should correctly add event item when string contains only string 1`] = `
[
  {
    "eventArgs": {
      "speed": null,
    },
    "eventName": "remove_all",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "change_cursor",
  },
  {
    "eventArgs": {
      "character": "t",
      "characterIndex": 0,
      "htmlTextInfo": {
        "originalString": "test",
        "partIndex": 0,
        "parts": [
          "test",
        ],
        "text": "test",
      },
      "node": null,
      "stringIndex": 0,
      "stringPart": "test",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 1,
      "htmlTextInfo": {
        "originalString": "test",
        "partIndex": 0,
        "parts": [
          "test",
        ],
        "text": "test",
      },
      "node": null,
      "stringIndex": 0,
      "stringPart": "test",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "s",
      "characterIndex": 2,
      "htmlTextInfo": {
        "originalString": "test",
        "partIndex": 0,
        "parts": [
          "test",
        ],
        "text": "test",
      },
      "node": null,
      "stringIndex": 0,
      "stringPart": "test",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "t",
      "characterIndex": 3,
      "htmlTextInfo": {
        "originalString": "test",
        "partIndex": 0,
        "parts": [
          "test",
        ],
        "text": "test",
      },
      "node": null,
      "stringIndex": 0,
      "stringPart": "test",
    },
    "eventName": "type_character",
  },
]
`;

exports[`Typewriter methods typeOutHTMLString should correctly add event items for html wrapper and all string characters 1`] = `
[
  {
    "eventArgs": {
      "speed": null,
    },
    "eventName": "remove_all",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "change_cursor",
  },
  {
    "eventArgs": {
      "node": <strong />,
      "parentNode": null,
    },
    "eventName": "add_html_tag_element",
  },
  {
    "eventArgs": {
      "character": "h",
      "characterIndex": 0,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 0,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "hello world",
      },
      "node": <strong />,
      "stringIndex": 0,
      "stringPart": "hello world",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 1,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 0,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "hello world",
      },
      "node": <strong />,
      "stringIndex": 0,
      "stringPart": "hello world",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 2,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 0,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "hello world",
      },
      "node": <strong />,
      "stringIndex": 0,
      "stringPart": "hello world",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 3,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 0,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "hello world",
      },
      "node": <strong />,
      "stringIndex": 0,
      "stringPart": "hello world",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 4,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 0,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "hello world",
      },
      "node": <strong />,
      "stringIndex": 0,
      "stringPart": "hello world",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": " ",
      "characterIndex": 5,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 0,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "hello world",
      },
      "node": <strong />,
      "stringIndex": 0,
      "stringPart": "hello world",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "w",
      "characterIndex": 6,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 0,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "hello world",
      },
      "node": <strong />,
      "stringIndex": 0,
      "stringPart": "hello world",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 7,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 0,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "hello world",
      },
      "node": <strong />,
      "stringIndex": 0,
      "stringPart": "hello world",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "r",
      "characterIndex": 8,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 0,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "hello world",
      },
      "node": <strong />,
      "stringIndex": 0,
      "stringPart": "hello world",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 9,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 0,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "hello world",
      },
      "node": <strong />,
      "stringIndex": 0,
      "stringPart": "hello world",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "d",
      "characterIndex": 10,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 0,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "hello world",
      },
      "node": <strong />,
      "stringIndex": 0,
      "stringPart": "hello world",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": " ",
      "characterIndex": 0,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 1,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": " ",
      },
      "node": null,
      "stringIndex": 0,
      "stringPart": " ",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "node": <div />,
      "parentNode": null,
    },
    "eventName": "add_html_tag_element",
  },
  {
    "eventArgs": {
      "character": "h",
      "characterIndex": 0,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 2,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "how are you?",
      },
      "node": <div />,
      "stringIndex": 0,
      "stringPart": "how are you?",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 1,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 2,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "how are you?",
      },
      "node": <div />,
      "stringIndex": 0,
      "stringPart": "how are you?",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "w",
      "characterIndex": 2,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 2,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "how are you?",
      },
      "node": <div />,
      "stringIndex": 0,
      "stringPart": "how are you?",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": " ",
      "characterIndex": 3,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 2,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "how are you?",
      },
      "node": <div />,
      "stringIndex": 0,
      "stringPart": "how are you?",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "a",
      "characterIndex": 4,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 2,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "how are you?",
      },
      "node": <div />,
      "stringIndex": 0,
      "stringPart": "how are you?",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "r",
      "characterIndex": 5,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 2,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "how are you?",
      },
      "node": <div />,
      "stringIndex": 0,
      "stringPart": "how are you?",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 6,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 2,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "how are you?",
      },
      "node": <div />,
      "stringIndex": 0,
      "stringPart": "how are you?",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": " ",
      "characterIndex": 7,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 2,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "how are you?",
      },
      "node": <div />,
      "stringIndex": 0,
      "stringPart": "how are you?",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "y",
      "characterIndex": 8,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 2,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "how are you?",
      },
      "node": <div />,
      "stringIndex": 0,
      "stringPart": "how are you?",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 9,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 2,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "how are you?",
      },
      "node": <div />,
      "stringIndex": 0,
      "stringPart": "how are you?",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "u",
      "characterIndex": 10,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 2,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "how are you?",
      },
      "node": <div />,
      "stringIndex": 0,
      "stringPart": "how are you?",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "?",
      "characterIndex": 11,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 2,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "how are you?",
      },
      "node": <div />,
      "stringIndex": 0,
      "stringPart": "how are you?",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": " ",
      "characterIndex": 0,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 3,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": " ",
      },
      "node": null,
      "stringIndex": 0,
      "stringPart": " ",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "node": <p />,
      "parentNode": null,
    },
    "eventName": "add_html_tag_element",
  },
  {
    "eventArgs": {
      "character": "G",
      "characterIndex": 0,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 4,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "Google",
      },
      "node": <p />,
      "stringIndex": 0,
      "stringPart": "Google",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 1,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 4,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "Google",
      },
      "node": <p />,
      "stringIndex": 0,
      "stringPart": "Google",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 2,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 4,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "Google",
      },
      "node": <p />,
      "stringIndex": 0,
      "stringPart": "Google",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "g",
      "characterIndex": 3,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 4,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "Google",
      },
      "node": <p />,
      "stringIndex": 0,
      "stringPart": "Google",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 4,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 4,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "Google",
      },
      "node": <p />,
      "stringIndex": 0,
      "stringPart": "Google",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 5,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 4,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "Google",
      },
      "node": <p />,
      "stringIndex": 0,
      "stringPart": "Google",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "!",
      "characterIndex": 0,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 5,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "!!!!",
      },
      "node": null,
      "stringIndex": 0,
      "stringPart": "!!!!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "!",
      "characterIndex": 1,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 5,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "!!!!",
      },
      "node": null,
      "stringIndex": 0,
      "stringPart": "!!!!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "!",
      "characterIndex": 2,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 5,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "!!!!",
      },
      "node": null,
      "stringIndex": 0,
      "stringPart": "!!!!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "!",
      "characterIndex": 3,
      "htmlTextInfo": {
        "originalString": "<strong>hello world</strong> <div>how are you?</div> <p>Google</p>!!!!",
        "partIndex": 5,
        "parts": [
          "hello world",
          " ",
          "how are you?",
          " ",
          "Google",
          "!!!!",
        ],
        "text": "!!!!",
      },
      "node": null,
      "stringIndex": 0,
      "stringPart": "!!!!",
    },
    "eventName": "type_character",
  },
]
`;

exports[`Typewriter methods typeOutHTMLString should correctly add event items for nested html and parent node 1`] = `
[
  {
    "eventArgs": {
      "speed": null,
    },
    "eventName": "remove_all",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "change_cursor",
  },
  {
    "eventArgs": {
      "node": <div
        class="wrapper"
      />,
      "parentNode": <div
        class="parent-node"
      />,
    },
    "eventName": "add_html_tag_element",
  },
  {
    "eventArgs": {
      "character": "t",
      "characterIndex": 0,
      "htmlTextInfo": {
        "originalString": "<div class="wrapper"><p><strong>test</strong></p>!</div>",
        "partIndex": 0,
        "parts": [
          "test!",
        ],
        "text": "test!",
      },
      "node": <div
        class="wrapper"
      />,
      "stringIndex": 0,
      "stringPart": "test!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 1,
      "htmlTextInfo": {
        "originalString": "<div class="wrapper"><p><strong>test</strong></p>!</div>",
        "partIndex": 0,
        "parts": [
          "test!",
        ],
        "text": "test!",
      },
      "node": <div
        class="wrapper"
      />,
      "stringIndex": 0,
      "stringPart": "test!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "s",
      "characterIndex": 2,
      "htmlTextInfo": {
        "originalString": "<div class="wrapper"><p><strong>test</strong></p>!</div>",
        "partIndex": 0,
        "parts": [
          "test!",
        ],
        "text": "test!",
      },
      "node": <div
        class="wrapper"
      />,
      "stringIndex": 0,
      "stringPart": "test!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "t",
      "characterIndex": 3,
      "htmlTextInfo": {
        "originalString": "<div class="wrapper"><p><strong>test</strong></p>!</div>",
        "partIndex": 0,
        "parts": [
          "test!",
        ],
        "text": "test!",
      },
      "node": <div
        class="wrapper"
      />,
      "stringIndex": 0,
      "stringPart": "test!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "!",
      "characterIndex": 4,
      "htmlTextInfo": {
        "originalString": "<div class="wrapper"><p><strong>test</strong></p>!</div>",
        "partIndex": 0,
        "parts": [
          "test!",
        ],
        "text": "test!",
      },
      "node": <div
        class="wrapper"
      />,
      "stringIndex": 0,
      "stringPart": "test!",
    },
    "eventName": "type_character",
  },
]
`;

exports[`Typewriter methods typeString should correctly add event items to queue if string does not contain html 1`] = `
[
  {
    "eventArgs": {
      "speed": null,
    },
    "eventName": "remove_all",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "change_cursor",
  },
  {
    "eventArgs": {
      "character": "H",
      "characterIndex": 0,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 1,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 2,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 3,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 4,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": " ",
      "characterIndex": 5,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "w",
      "characterIndex": 6,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 7,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "r",
      "characterIndex": 8,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 9,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "d",
      "characterIndex": 10,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "!",
      "characterIndex": 11,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello world!",
    },
    "eventName": "type_character",
  },
]
`;

exports[`Typewriter shoud setup correctly with default settings 1`] = `
{
  "calledEvents": [],
  "cursorAnimation": null,
  "elements": {
    "container": <div
      id="test"
    >
      <span
        class="Typewriter__wrapper"
      />
      <span
        class="Typewriter__cursor"
      >
        |
      </span>
    </div>,
    "cursor": <span
      class="Typewriter__cursor"
    >
      |
    </span>,
    "wrapper": <span
      class="Typewriter__wrapper"
    />,
  },
  "eventLoop": null,
  "eventLoopPaused": false,
  "eventQueue": [
    {
      "eventArgs": {
        "speed": null,
      },
      "eventName": "remove_all",
    },
    {
      "eventArgs": {
        "cursor": "|",
      },
      "eventName": "change_cursor",
    },
  ],
  "initialOptions": {
    "autoStart": false,
    "cursor": "|",
    "cursorClassName": "Typewriter__cursor",
    "delay": "natural",
    "deleteSpeed": "natural",
    "devMode": false,
    "loop": false,
    "onCreateTextNode": undefined,
    "onRemoveNode": undefined,
    "pauseFor": 1500,
    "skipAddStyles": false,
    "stringSplitter": undefined,
    "strings": [],
    "wrapperClassName": "Typewriter__wrapper",
  },
  "lastFrameTime": null,
  "pauseUntil": null,
  "reverseCalledEvents": [],
  "visibleNodes": [],
}
`;

exports[`Typewriter shoud setup correctly with default settings 2`] = `
{
  "autoStart": false,
  "cursor": "|",
  "cursorClassName": "Typewriter__cursor",
  "delay": "natural",
  "deleteSpeed": "natural",
  "devMode": false,
  "loop": false,
  "onCreateTextNode": undefined,
  "onRemoveNode": undefined,
  "pauseFor": 1500,
  "skipAddStyles": false,
  "stringSplitter": undefined,
  "strings": [],
  "wrapperClassName": "Typewriter__wrapper",
}
`;

exports[`Typewriter should correctly setup container element with element 1`] = `
<div
  id="test"
>
  <span
    class="Typewriter__wrapper"
  />
  <span
    class="Typewriter__cursor"
  >
    |
  </span>
</div>
`;

exports[`Typewriter should correctly setup container element with selector 1`] = `
<div
  id="test"
>
  <span
    class="Typewriter__wrapper"
  />
  <span
    class="Typewriter__cursor"
  >
    |
  </span>
</div>
`;

exports[`Typewriter should correctly setup queue if autostart is set to true 1`] = `
[
  {
    "eventArgs": {
      "speed": null,
    },
    "eventName": "remove_all",
  },
  {
    "eventArgs": {
      "cursor": "|",
    },
    "eventName": "change_cursor",
  },
  {
    "eventArgs": {
      "character": "H",
      "characterIndex": 0,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "e",
      "characterIndex": 1,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 2,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 3,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 4,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 0,
      "stringPart": "Hello",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "ms": 1500,
    },
    "eventName": "pause_for",
  },
  {
    "eventArgs": {
      "speed": "natural",
    },
    "eventName": "remove_all",
  },
  {
    "eventArgs": {
      "character": "w",
      "characterIndex": 0,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 1,
      "stringPart": "world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "o",
      "characterIndex": 1,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 1,
      "stringPart": "world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "r",
      "characterIndex": 2,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 1,
      "stringPart": "world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "l",
      "characterIndex": 3,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 1,
      "stringPart": "world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "d",
      "characterIndex": 4,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 1,
      "stringPart": "world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "character": "!",
      "characterIndex": 5,
      "htmlTextInfo": null,
      "node": null,
      "stringIndex": 1,
      "stringPart": "world!",
    },
    "eventName": "type_character",
  },
  {
    "eventArgs": {
      "ms": 1500,
    },
    "eventName": "pause_for",
  },
  {
    "eventArgs": {
      "speed": "natural",
    },
    "eventName": "remove_all",
  },
]
`;
